lang/examples/good/13-01-nested-function.wdr
fun main(): Void {
  printInt(test());

  return;
}

fun test(): Int {
  fun test1(): Int {
    return 42;
  }

  return test1();
}