lang/examples/bad/00-01-division-by-0.wdr
fun main(): Void {
  printInt(1 / 0);
  return;
}